fix: footer visibility

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -49,7 +49,7 @@
 
     &__right {
         position: absolute;
-        right: 0.5rem;
+        right: 2rem;
         display: flex;
         transform: translateX(90%);
         gap: 2.5rem;
